--- a/random_quote/css/estilo.css
+++ b/random_quote/css/estilo.css
@@ -1,5 +1,5 @@
 body{
-  background:url("https://wallpaperscraft.com/image/star_art_sky_night_people_silhouette_98142_1920x1080.jpg");
+  background:#5F9EA0;
 background-repeat:no-repeat;
 background-size:cover;
 margin-top:60px;
@@ -8,8 +8,8 @@ font-family:Impact, Charcoal, sans-serif;
 .center{
   display:table;
   margin:0 auto;
-  color:white;
-    background:rgba(255,255,255,0.3);
+  color:black;
+  background:white;
   padding:30px;
   height:100%;
 }
