Adicionando interação caso ganhe/perca o jogo

--- a/hangman/css/estilo.css
+++ b/hangman/css/estilo.css
@@ -4,3 +4,14 @@
 	margin-top:20px;
 
 }
+
+#explicacao{
+	margin-top:30px;
+}
+
+#mensagem{
+	color: red;
+}
+#letras_disponiveis{
+	margin-bottom: 20px;
+}
