--- a/downloads/style.css
+++ b/downloads/style.css
@@ -6,12 +6,24 @@ body, html {
 .container {
 	display: flex;
 	flex-flow: row wrap;
-	justify-content: center;
+	margin: 0 10px 0 10px;
 }
-
+.container a{
+	text-decoration: none;
+	color: rgb(120,120,255);
+}
+.container h2{
+	flex: 100%;
+	text-align: center;
+	border-bottom: 4px solid rgb(200,255,200);
+}
 .container .program {
 	flex: 30%;
 	margin: 10px 30px 10px 30px;
+	border-bottom: 3px solid rgb(220,255,240);
+	border-radius: 10px;
+	padding: 5px 10px;
+	width: 30%;
 }
 
 
@@ -21,5 +33,20 @@ body, html {
 	}
 	p,a{
 		font-size: 12px; 
+	}
+	.container {
+		flex-direction: column;
+	}
+	.container .program{
+		margin: 3px 10px;
+	}	
+}
+
+@media (max-width: 700px) {
+	.container h2{
+		font-size:20px;
+	}
+	p,a{
+		font-size: 15px; 
 	}
 }
